# liboqs

./: .astylerc  .build-osx.sh  .clang-format  .dsci.yml  .gitattributes  .gitignore  .gitmodules  .rumdl.toml  .travis-banned-functions-check.sh  .travis-character-encoding-check.sh  .travis-global-namespace-check.sh  .travis-style-check.sh  .travis-tests.sh  .travis.yml  ALGORITHMS.md  CI.md  CMakeLists.txt  CMakeLists.txt.in  CODE_OF_CONDUCT.md  CONFIGURE.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  GOVERNANCE.md  LICENSE.txt  Makefile  Makefile.am  Makefile.in  NEW_API.md  PLATFORMS.md  README.md  RELEASE.md  SECURITY.md  acinclude.m4  aclocal.m4  android-build.sh  appveyor-build.bat  appveyor.yml  appveyor_build.bat  bench-memory.sh  (+26 more)
scripts/copy_from_xkcp/: CMakeLists.txt  README  VERSION  checkout.sh  package.sh  update_patches.sh
src/: CMakeLists.txt  Config.cmake.in  ds_benchmark.h  liboqs.pc.in  oqs.h  oqsconfig.h  oqsconfig.h.cmake
src/aes/: Makefile.am  aes.c  aes.h  aes_c.c  aes_local.h  aes_ni.c  ds_benchmark.h  test_aes.c
src/common/: CMakeLists.txt  Makefile  Makefile.am  blackbox.h  common.c  common.h  compat.h  ds_benchmark.h  oqs.h  ossl_functions.h  ossl_helpers.c  ossl_helpers.h  rand.c  rand.h  rand_nist.c  x86_64_helpers.h
src/common_avx2/: CMakeLists.txt
src/crypto/: CMakeLists.txt  sources.cmake
src/kem/: CMakeLists.txt  Makefile  Makefile.am  example_kem.c  kat_kem.c  kem.c  kem.h  speed_kem.c  test_kem.c
src/kex/: .Makefile.am.swo  Makefile.am  Makefile.in  kex.c  kex.h  minimal_kex_oqs.c  test_kex.c
src/kex_code_mcbits/: Makefile.am  kex_code_mcbits.c  kex_code_mcbits.h  mcbits.h
src/kex_code_nrqcmdpc/: config.h  kex_code_nrqcmdpc.c  kex_code_nrqcmdpc.h  nrqcmdpc.c  nrqcmdpc.h  types.h
src/kex_lwe_frodo/: Makefile.am  kex_lwe_frodo.c  kex_lwe_frodo.h  kex_lwe_frodo_macrify.c  local.h  lwe.c  lwe_macrify.c  lwe_noise.c  recommended.h
src/kex_lwe_frodokem/: Makefile.am  frodokem_640_aes.c  frodokem_640_cshake.c  kex_lwe_frodokem.c  kex_lwe_frodokem.h
src/kex_mlwe_kyber/: indcpa.c  kex_mlwe_kyber.c  kyber.c  ntt.c  params.h  poly.c  polyvec.c  precomp.c  reduce.c  verify.c
src/kex_ntru/: Makefile.am  kex_ntru.c  kex_ntru.h  ntru_crypto_drbg.c  ntru_crypto_platform.h  ntru_crypto_sha1.h  ntru_crypto_sha256.h
src/kex_rlwe_bcns15/: Makefile.am  Makefile.in  fft.c  kex_rlwe_bcns15.c  kex_rlwe_bcns15.h  local.h  rlwe.c  rlwe_a.h  rlwe_kex.c
src/kex_rlwe_latticecrypto/: LatticeCrypto.h  LatticeCrypto_kex.c  LatticeCrypto_priv.h  kex_rlwe_latticecrypto.c  kex_rlwe_latticecrypto.h  ntt_constants.c
src/kex_rlwe_msrln16/: LatticeCrypto.h  LatticeCrypto_kex.c  LatticeCrypto_priv.h  License.txt  Makefile.am  README.txt  kex_rlwe_msrln16.c  kex_rlwe_msrln16.h  ntt_constants.c
src/kex_rlwe_newhope/: Makefile.am  error_correction.c  error_correction.h  fips202.c  kex_rlwe_newhope.c  kex_rlwe_newhope.h  newhope.c  newhope.h  ntt.c  ntt.h  params.h  poly.c  poly.h  precomp.c  reduce.c
src/kex_rlwe_vscrypto/: LICENSE.txt  Makefile  Makefile.am  README.md  ctx_pot_MQ.c  ctx_prime_MQ.c  fft_crt_MQ.c  fft_crt_MQ.h  fft_pot_MQ.c.txt  fft_prime_MQ.c.txt  kex_rlwe_vscrypto.c  kex_rlwe_vscrypto.h  messy_ctx_1024_40961.c  messy_ctx_256_15361.c  messy_ctx_337_32353.c  messy_ctx_433_35507.c  messy_ctx_512_25601.c  messy_ctx_541_41117.c  messy_ctx_631_44171.c  messy_ctx_739_47297.c  messy_ctx_821_49261.c  messy_fft_1024_17633281.c  messy_fft_1024_8816641.c  messy_fft_2048_17633281.c  messy_fft_2048_8816641.c  set_ring_ctx.c  set_ring_ctx.h  vscrypto_defs.h  vscrypto_kex.c  vscrypto_kex.h
src/kex_sidh_cln16/: Makefile.am  SIDH.c  SIDH.h  SIDH_internal.h  SIDH_setup.c  ec_isogeny.c  fpx.c  kex_sidh_cln16.c  kex_sidh_cln16.h  sidh_kex.c  validate.c
src/kex_sidh_iqc_ref/: Makefile.am  kex_sidh_iqc_ref.c  kex_sidh_iqc_ref.h  kex_sidh_iqc_ref_params.c  sidh_elliptic_curve.c  sidh_elliptic_curve.h  sidh_elliptic_curve_dlp.c  sidh_elliptic_curve_dlp.h  sidh_isogeny.c  sidh_isogeny.h  sidh_private_key.c  sidh_private_key.h  sidh_public_key.c  sidh_public_key.h  sidh_public_key_encryption.c  sidh_public_key_encryption.h  sidh_public_key_validation.c  sidh_public_key_validation.h  sidh_public_param.c  sidh_public_param.h  sidh_quadratic_ext.c  sidh_quadratic_ext.h  sidh_shared_key.c  sidh_shared_key.h  sidh_util.c  sidh_util.h
src/kex_sidh_msr/: Makefile.am  config.h  fpx.c  kex_sidh_msr.c  kex_sidh_msr.h  kex_sike_msr.c  kex_sike_msr.h  sidh.c  sike.c  windows_undef.h
src/rand/: Makefile.am  Makefile.in  rand.c  rand.h  test_rand.c
src/rand_urandom_aesctr/: Makefile.am  rand_urandom_aesctr.c
src/rand_urandom_chacha20/: Makefile.am  chacha20.c  rand_urandom_chacha20.c  rand_urandom_chacha20.h
src/scripts/: symbol_alias.sh
src/sha3/: sha3.h
src/sig/: Makefile  Makefile.am  example_sig.c  kat_sig.c  minimal_sig_oqs.c  sig.c  sig.h  speed_sig.c  test_sig.c
src/sig_picnic/: Makefile.am  build_picnic.sh  oqs_sig_picnic.patch  sig_picnic.c  sig_picnic.h
src/sig_picnic_msr/: LowMC.c  LowMC.h  LowMCConstants.h  LowMCEnc.c  LowMCEnc.h  Makefile.am  benchmark_lowmc.c  example.c  matrices_256_10_38.h  matrices_256_42_14.h  picnic.c  picnic.h  platform.h  preprocessMatrices.c  test_util.c  test_util.h
src/sig_qtesla/: Makefile.am  sig_qtesla.c  sig_qtesla.h
tests/: CMakeLists.txt  Makefile  Makefile.am  collect-objects.py  conftest.py  ds_benchmark.h  dump_alg_info.c  example_kem.c  example_sig.c  example_sig.cpp  example_sig_stfl.c  find_common_code.sh  fuzz_test_dilithium2.c  fuzz_test_kem.c  fuzz_test_kem_decaps.c  fuzz_test_kem_encaps.c  fuzz_test_sig.c  fuzz_test_sig_stfl_deserialize.c  fuzz_test_sig_stfl_lms.c  fuzz_test_sig_stfl_verify.c  fuzz_test_sig_stfl_xmss.c  fuzz_test_sig_verify.c  grep_symbols.sh  helpers.py  kat_kem.c  kat_sig.c  kat_sig_stfl.c  kem_fo_cache_oracle.c  kem_fo_cache_oracle.py  minimal_kex_oqs.c  minimal_sig_oqs.c  run_astyle.sh  speed_common.c  speed_kem.c  speed_sig.c  speed_sig_stfl.c  system_info.c  test_acvp_vectors.py  test_aes.c  test_alg_info.py  (+50 more)
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml
(+13740 files in other folders)
